--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <main class="todo-container section-container">
         <div class="todo__booklist-container">
-            <h1>To-Do BookList</h1>
+            <h1 class="todo__booklist-title">To-Do BookList</h1>
             <ul class="todo__booklist">
                 <li>hi</li>
                 <li>hi</li>
@@ -29,7 +29,7 @@
         </div>
     
         <div class="todo__list-container">
-            <h1>To-Do {name}</h1>
+            <h1 class="todo__list-title">To-Do {name}</h1>
             <ul class="todo__list">
                 <li><p>hi</p></li>
                 <li><p>hi</p></li>
