refactor: rename boolist to tags

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         </div>
     </header>
     <main class="todo-container section-container">
-        <div class="todo__booklist-container">
-            <h1 class="todo__booklist-title">To-Do BookList</h1>
-            <ul class="todo__booklist">
+        <div class="todo__tags-container">
+            <h1 class="todo__tags-title">To-Do Tags</h1>
+            <ul class="todo__tags">
                 <li>hi</li>
                 <li>hi</li>
                 <li>hi</li>
