feat: convert html & css project to react with vite

--- a/index.html
+++ b/index.html
@@ -1,43 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Scheduler</title>
-</head>
-<body>
-    <header>
-        <div class="header section-container">
-            <div class="header__title">
-                <h1 class="header__title-text"><em>Scheduler</em></h1>
-            </div>
-            <div class="header__buttons">
-                <i class="fa-regular fa-envelope fa-3x"></i>
-                <i class="fa-solid fa-gear fa-3x"></i>
-            </div>
-        </div>
-    </header>
-    <main class="todo-container section-container">
-        <div class="todo__tags-container">
-            <h1 class="todo__tags-title">To-Do Tags</h1>
-            <ul class="todo__tags">
-                <li>hi</li>
-                <li>hi</li>
-                <li>hi</li>
-            </ul>
-        </div>
-    
-        <div class="todo__list-container">
-            <h1 class="todo__list-title">To-Do {name}</h1>
-            <ul class="todo__list">
-                <li><p>hi</p></li>
-                <li><p>hi</p></li>
-                <li><p>hi</p></li>
-            </div>
-        </main>
-
-        <script src="https://kit.fontawesome.com/583d08a5f8.js" crossorigin="anonymous"></script>
-    </ul>
-</body>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+    <script src="https://kit.fontawesome.com/583d08a5f8.js" crossorigin="anonymous"></script>
+  </body>
 </html>
